Fix spacing

--- a/src/components/TransitMap.scss
+++ b/src/components/TransitMap.scss
@@ -22,7 +22,7 @@
 
 .map-top-right-container {
   position: absolute;
-  top: 5rem;
+  top: 4rem;
   right: 10px;
   z-index: 400;
   a, a:link, a:visited, a:active, a:hover {
